# esgi_ml_industrialisation

./: README.md  conf.yml.example  pyproject.toml
data/: test_ids.csv  test_pred.npy
src/: app.py  features.py  model.py
src/models/: __init__.py  sales.py
src/services/: __init__.py  sales.py
td3/: app.py  test_app.py
td4/: conf.yaml  data.py  features.py  models.py  script.py  test_end_to_end.py
td5/: chatbot.py  sql_undoer.py  test_chatbot.py
tests/: test_integration.py  test_model.py  test_td1_prof.py
tests/unit/: test_features.py
