[project]
name = "ml-industrialisation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.2",
    "pandas>=2.3.2",
    "pytest>=8.4.1",
    "requests>=2.32.5",
    "scikit-learn>=1.7.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
